Fixed image overflow issue

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,6 +1,9 @@
 html { font-size: 100%; overflow-y: scroll; -webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%; }
 
-img { -ms-interpolation-mode: bicubic; }
+img:not(.z) { 
+	-ms-interpolation-mode: bicubic; 
+	width: 100%;
+}
 
 body { 
 	font: 300 24px/32px Source Sans Pro;
